--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,10 @@
 .background {
-  background-color: #ffffff;
+  background-color: #1e1e1e;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
+.rightPanel {
+  width: 80vw;
+}
