--- a/styles/leftpanel.module.css
+++ b/styles/leftpanel.module.css
@@ -3,11 +3,15 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 16px 16px 24px;
-  gap: 32px;
+  gap: 20px;
 
   position: relative;
-  width: 20vw;
+  width: 18vw;
   height: 90vh;
+
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  margin-left: 10px;
 
   background: #111111;
   border-radius: 16px;
@@ -264,8 +268,7 @@
   align-items: center;
   padding: 12px 37px;
   gap: 8px;
-
-  width: 260px;
+  width: 90%;
   height: 44px;
 
   /* Text/Medium */
