Updated some styles

--- a/styles/leftpanel.module.css
+++ b/styles/leftpanel.module.css
@@ -22,6 +22,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+}
+
+.topBoxLeft {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
 }
 
 .topBoxLvl {
