--- a/styles/topbox.module.css
+++ b/styles/topbox.module.css
@@ -65,6 +65,10 @@
   line-height: 20px;
 
   color: #fafafa;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .highTopTextColor {
@@ -101,7 +105,7 @@
 }
 
 .ethName {
-  width: 87px;
+  width: 60%;
   height: 20px;
 
   font-family: "Sharp Grotesk";
@@ -118,7 +122,7 @@
   color: #a2a2a2;
 }
 
-.ethvalue {
+.ethValue {
   width: 25px;
   height: 20px;
 
