--- a/styles/topbox.module.css
+++ b/styles/topbox.module.css
@@ -1,7 +1,4 @@
 .highlightHeading {
-  width: 70px;
-  height: 20px;
-
   font-family: "Sharp Grotesk";
   font-style: normal;
   font-weight: 500;
@@ -9,6 +6,10 @@
   line-height: 20px;
 
   color: #a2a2a2;
+
+  margin-left: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
 }
 
 .cardsBox {
@@ -29,19 +30,6 @@
 
   background: #111111;
   border-radius: 16px;
-}
-
-.circle {
-  position: relative;
-  width: 174px;
-  height: 174px;
-  left: -58px;
-  top: -69px;
-
-  /* Activities/Bought_10% */
-
-  background: rgba(37, 181, 213, 0.1);
-  filter: blur(25px);
 }
 
 .highlightCardTop {
