--- a/styles/leftpanel.module.css
+++ b/styles/leftpanel.module.css
@@ -6,7 +6,7 @@
   gap: 20px;
 
   position: relative;
-  width: 18vw;
+  width: 19vw;
   height: 90vh;
 
   margin-top: 5vh;
@@ -15,6 +15,42 @@
 
   background: #111111;
   border-radius: 16px;
+}
+
+.avatar {
+  border: solid 4px #ffc148;
+  border-left-color: rgba(248, 169, 16, 0.1);
+  padding: 2px;
+  display: inline-block;
+  border-radius: 50%;
+  position: relative;
+
+  transform: rotate(-135deg);
+  -ms-transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+.avatar img {
+  display: block;
+  border-radius: 50%;
+
+  transform: rotate(135deg);
+  -ms-transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+
+.avatar:before {
+  height: 4px;
+  top: 50%;
+  left: 2px;
+  right: -5px;
+  margin-top: -2px;
+}
+.avatar:after {
+  width: 4px;
+  left: 50%;
+  top: 2px;
+  bottom: -5px;
+  margin-left: -2px;
 }
 
 .topBox {
